--- a/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Project/summary.html.twig
@@ -25,7 +25,7 @@
                             Issues
                         </a>
                     </div>
-                    <div id="accordion_issues" class="accordion-body collapse in">
+                    <div id="accordion_issues" class="accordion-body in">
                         <div class="accordion-inner">
                             {% include 'PMTWebBundle:Issue:list.html.twig' with {'issues': project.issues, 'view': 'simple'} %}
                         </div>
