--- a/src/PMT/WebBundle/Resources/views/emptyLayout.html.twig
+++ b/src/PMT/WebBundle/Resources/views/emptyLayout.html.twig
@@ -11,11 +11,11 @@
     <link rel="shortcut icon" href="{{ asset('favicon.ico') }}"/>
 
     {% stylesheets
-    '@PMTWebBundle/Resources/public/css/bootstrap.min.css'
-    '@PMTWebBundle/Resources/public/vendor/select2/select2.css'
-    '@PMTWebBundle/Resources/public/css/select2-bootstrap.css'
-    '@PMTWebBundle/Resources/public/css/main.css'
-    filter='cssrewrite' %}
+        'bundles/pmtweb/css/bootstrap.min.css'
+        'bundles/pmtweb/vendor/select2/select2.css'
+        'bundles/pmtweb/css/select2-bootstrap.css'
+        'bundles/pmtweb/css/main.css'
+        filter='cssrewrite' %}
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
 
