--- a/src/PMT/WebBundle/Resources/views/Issue/list.html.twig
+++ b/src/PMT/WebBundle/Resources/views/Issue/list.html.twig
@@ -58,7 +58,7 @@
     {% endif %}
 {% else %}
     {% if issues|length %}
-        <table class="table table-striped">
+        <table class="table">
             <tbody>
             {% for key,issue in issues %}
                 <tr>
